# zero2prod

./: Cargo.toml
migrations/: 20220109174115_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs  mod.rs  setup.rs
tests/routes/: health_check.rs  subscriptions.rs
