[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "=4.0.0-beta.16"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
actix-rt = "2.0.2"
reqwest = "0.11.8"
tokio = "1"
